# scalable-django-graphql

./: app.py
scalable_django_graphql/: scalable_django_graphql_stack.py
src/: pyproject.toml
src/config/: urls.py
src/config/settings/: base.py
src/docker/: .env.template  docker-compose.yml
src/docker/app/: Dockerfile
src/graph/: schema.py
src/products/: admin.py  models.py  schema.py  urls.py
src/products/migrations/: 0001_initial.py
src/users/: admin.py  models.py  schema.py
src/users/migrations/: 0001_initial.py
tests/unit/: test_scalable_django_graphql_stack.py
