[tool.poetry]
name = "django-graphql"
version = "0.1.0"
description = ""
authors = ["marianobrc <marianomartinez84@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
django-storages = "^1.13.1"
boto3 = "^1.24.56"
psycopg2 = "^2.9.3"
django-model-utils = "^4.2.0"
graphene-django = "^2.15.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
